cmake_minimum_required(VERSION 3.24)
project(alarm)
set(CMAKE_C_STANDARD 17)
set(CMAKE_C_STANDARD_REQUIRED TRUE)
find_package(PkgConfig REQUIRED)
pkg_check_modules(GTK3 REQUIRED gtk+-3.0)
pkg_check_modules(GST REQUIRED gstreamer-1.0>=1.8)
include_directories(${GTK3_INCLUDE_DIRS} ${GST_INCLUDE_DIRS})
link_directories(${GTK3_LIBRARY_DIRS} ${GST_LIBRARY_DIRS})
add_definitions(${GTK3_CFLAGS_OTHER})
file(GLOB INCLUDE_FILES ${PROJECT_SOURCE_DIR}/*.h)
file(GLOB SOURCE_FILES ${PROJECT_SOURCE_DIR}/*.c)
ADD_EXECUTABLE(${PROJECT_NAME} ${INCLUDE_FILES} ${SOURCE_FILES}) 
target_link_libraries(${PROJECT_NAME} ${GTK3_LIBRARIES} ${GST_LIBRARIES})